# phantom-fhe

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  SUMMARY.md
benchmark/: CMakeLists.txt  bench_utils.cuh  bfv_bench.cu  bgv_bench.cu  ckks_bench.cu  example_bench.cu  keyswitch_bench.cu  matmul_bench.cu  ntt_bench.cu  nwt_bench.cu
doc/: README.md  SUMMARY.md  configuration.md  installation.md
doc/api-explained/: advanced-features.md  encoding-and-decoding.md  encoding-and-encryption.md  encryption-and-decryption.md  homomorphic-operations.md  low-level-arithmetics.md  parameter-instantiation.md
doc/examples/: bfv-examples.md  bgv-examples.md  ckks-examples.md
doc/usages/: c++-applications.md  python-applications.md
example/: 1_bfv.cu  1_bfv_basics.cu  2_bgv.cu  2_encoder.cu  3_bgv_basics.cu  3_ckks.cu  4_ckks_basics.cu  4_kernel_fusing.cu  5_bfv_opt.cu  6_kernel_fusing.cu  CMakeLists.txt  example.cu  example.h
examples/: 1_bfv.cu  3_ckks.cu  CMakeLists.txt  example.cu  example.h  serialization.cu
include/: batchencoder.h  butterfly.cuh  ciphertext.h  ckks.h  common.h  context.cuh  croots.h  cuda_wrapper.cuh  evaluate.cuh  evaluate.h  fft.h  galois.cuh  gputype.h  lock.cuh  mempool.cuh  ntt.cuh  phantom.h  plaintext.h  polymath.cuh  prng.cuh  rns.cuh  rns_base.cuh  rns_bconv.cuh  scalingvariant.cuh  secretkey.h  uintmath.cuh  uintmodmath.cuh  util.cuh
include/host/: blake2.h  encryptionparams.h  globals.h  modulus.h  numth.h  uintarith.h  uintarithmod.h  uintarithsmallmod.h  uintcore.h
include/util/: blake2-impl.h  common.h  defines.h  encryptionparams.h  galois.h  globals.h  hash.h  hestdparms.h  modulus.h  ntt.h  numth.h  polycore.h  rns.h  uintarith.h  uintarithmod.h  uintarithsmallmod.h  uintcore.h
python/: CMakeLists.txt  README.md  setup.cfg  setup.py
python/examples/: bfv.py  bgv.py  ckks.py
python/src/: binding.cu
src/: CMakeLists.txt  batchencoder.cu  ckks.cu  context.cu  croots.cu  eval_key_switch.cu  evaluate.cu  fft.cu  galois.cu  mempool.cu  modulus.cu  polymath.cu  prng.cu  rns.cu  rns_base.cu  rns_bconv.cu  scalingvariant.cu  secretkey.cu
src/host/: blake2b.cu  blake2xb.cu  globals.cu  hash.cu  modulus.cu  ntt.cu  numth.cu  rns.cu  uintarith.cu  uintarithmod.cu  uintarithsmallmod.cu
src/ntt/: bired_ntt.cu  fntt_2d.cu  intt_2d.cu  ntt_1d.cu  ntt_keyswitch_old.cu  ntt_moddown.cu  ntt_modup.cu
src/util/: blake2b.cu  blake2xb.cu  galois.cu  globals.cu  hash.cu  ntt.cu  numth.cu  rns.cu  uintarith.cu  uintarithmod.cu  uintarithsmallmod.cu  uintcore.cu
test/: CMakeLists.txt  bired_ntt_test.cu  fft_test.cu  nwt_test.cu
