[metadata]
name="pyPhantom",
version="1.0.0",
author="Hao Yang",
author_email="crypto@d4rk.dev",
description="Python Wrapper for Phantom FHE GPU Library",
long_description="",

[options]
ext_modules=[CMakeExtension("pyPhantom")],
cmdclass={"build_ext": CMakeBuild},
zip_safe=False,
python_requires=">=3.10",
